[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/goblin-brown.tres" type="SpriteFrames" id=2]
[ext_resource path="res://sprites/death-anim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://sounds/bombdrop.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/hahaha.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/yoohoo.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/iamback.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/pickup.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=9]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.501961, 1, 1, 1 ), Color( 1, 0.501961, 1, 1 ), Color( 1, 1, 0.501961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CharSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )

[node name="DeathSprite" type="AnimatedSprite" parent="."]
visible = false
z_index = 1
frames = ExtResource( 3 )
frame = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -15.75, -7.75, -15.75, 7.75, -7.75, 15.75, 7.75, 15.75, 15.75, 7.75, 15.75, -7.75, 7.75, -15.75, -7.75, -15.75 )

[node name="ActionAnimations" type="AnimationPlayer" parent="."]
autoplay = "down_idle"
anims/death = SubResource( 1 )
anims/down = SubResource( 2 )
anims/down_idle = SubResource( 3 )
anims/side = SubResource( 4 )
anims/side_idle = SubResource( 5 )
anims/up = SubResource( 6 )
anims/up_idle = SubResource( 7 )

[node name="StatusAnimations" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 8 )
anims/modulate = SubResource( 9 )

[node name="TimerPowerup" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="TimerRespawn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SoundEffects" type="Node" parent="."]

[node name="bombdrop" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 4 )

[node name="death" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 5 )

[node name="respawn1" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 6 )

[node name="respawn2" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 7 )

[node name="pickup" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="ActionAnimations" to="." method="_on_ActionAnimations_finished"]
[connection signal="timeout" from="TimerPowerup" to="." method="_on_TimerPowerup_timeout"]
[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]
